admin table is now functional and only visible with admin permissions, also the data is now linked to the pets adoption modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,13 @@ header{
 /* END adoptar CARDS */
 
 
+/*start admin table*/
+#tableAdmin .report{
+    font-weight: bold;
+    font-size: 20px;
+}
+/*end admin table*/
+
 .form {
     width: 450px;
 }
