--- a/view/app.html
+++ b/view/app.html
@@ -68,48 +68,53 @@
                         </div>
                     </div>
                 </div>     
-            </div>
-        </section> 
-        <!-- TABLA DE DATOS ADMIN -->
-        <section id="tableAdmin" v-if="newArrUsers[pos].token === true && newArrUsers[pos].status === admin">
-            <div class="container">
-                <div class="table-responsive">
-                    <table class="table table-dark table-hover">
-                        <thead class="text-center">
-                            <tr>
-                                <th>NOMBRE</th>
-                                <th>FECHA</th>
-                                <th>QUIÉN ADOPTO</th>
-                                <th>OPCIONES</th>
-                            </tr>
-                        </thead>
-                        <tbody class="text-center">
-                            <tr v-for="(objeto,index) in arrayTabPet" :key="`objeto-${index}`">
-                                <td v-text="objeto.name"></td>
-                                <td v-text="objeto.date"></td>
-                                <td v-text="objeto.nameAdoption"></td> 
-                                <td>
-                                    <button
-                                        type="button"
-                                        class="btn btn-danger btn-sm"
-                                        data-tooltip
-                                        title="Eliminar"
-                                        @click="deleteArrayTabPet(index)"
-                                        >
-                                        <i class="fa-solid fa-trash-can"></i><i class="icon-trash"></i>
-                                    </button>
-                                </td> 
-                            </tr>
-                        </tbody>
-                        <tbody v-else>
-                            <td colspan="5" class="text-center">
-                                NO EXISTEN DATOS
-                            </td>
-                        </tbody>
-                    </table>
+            </section>
+            <!-- TABLA DE DATOS ADMIN -->
+            <section id="tableAdmin" v-if="newArrUsers[pos].token === true && newArrUsers[pos].status === 'admin'">
+                <div class="container">
+                    <div class="table-responsive">
+                        <table class="table table-dark table-hover">
+                            <thead class="text-center">
+                                <tr>
+                                    <th>NOMBRE</th>
+                                    <th>FECHA</th>
+                                    <th>QUIÉN ADOPTÓ</th>
+                                    <th>OPCIONES</th>
+                                </tr>
+                            </thead>
+                            <tbody class="text-center" v-if="adminData.length">
+                                <tr v-for="(objeto, index) in adminData" :key="`objeto-${index}`">
+                                    <td v-text="objeto.name"></td>
+                                    <td v-text="objeto.date"></td>
+                                    <td v-text="objeto.adopter"></td> 
+                                    <td>
+                                        <button
+                                            type="button"
+                                            class="btn btn-danger btn-sm"
+                                            data-tooltip
+                                            title="Eliminar"
+                                            @click="delData(index)"
+                                            >
+                                            <i class="fa-solid fa-trash-can"></i><i class="icon-trash"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr class="report">
+                                    <td colspan="2">Cantidad Mascotas Adoptadas:</td>
+                                    <td colspan="2" v-text="nPetsAdopted"></td>
+                                </tr>
+                            </tbody>
+                            <tbody v-else>
+                                <td colspan="5" class="text-center">
+                                    NO EXISTEN DATOS
+                                </td>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-        </section>    
-            
+            </section>    
+            <!-- /TABLA DE DATOS ADMIN -->
+
             <!-- Modal dar en adopción-->
             <div class="modal fade" id="modalAdopcion" tabindex="-1" aria-labelledby="modalAdopcion" aria-hidden="true">
                 <div class="modal-dialog modal-sm">
