--- a/view/app.html
+++ b/view/app.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>App</title>
         <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
         rel="stylesheet"
@@ -20,7 +20,7 @@
             <header>
                 <nav id="navbar" class="navbar navbar-expand-lg bg-light navbar-light">
                     <div class="container">
-                        <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="app.html">
                             <img src="../images/logo.png" alt="logo">
                             <span>Pets</span>
                         </a>
@@ -36,7 +36,7 @@
                                     <a class="nav-link logout" aria-current="page" href="#" @click="logout">Cerrar Sesión <i class="fa-solid fa-right-from-bracket"></i></a>
                                 </li>
                                 <li>
-                                    <a class="nav-link" aria-current="page">Bienvenido: <span v-text="newArrUsers[pos].name" class="text-primary"></span></a>
+                                    <p class="nav-link" aria-current="page">Bienvenido: <span v-text="newArrUsers[pos].name" class="text-primary"></span></p>
                                 </li>
                             </ul>
                         </div>
@@ -46,7 +46,7 @@
             <!-- HEADER -->
 
 
-            <h1 class="menu-title">PETS</h1>
+            <h1 class="menu-title">Mascotas</h1>
             <section class="cards-menu">
                 <div class="container">
                     <div class="row">
@@ -161,7 +161,7 @@
                 <div class="modal-dialog modal-xl">
                     <div class="modal-content">
                         <div class="modal-header text-center">
-                            <h5 class="modal-title text-center" id="exampleModalLabel">Adopciones</h5>
+                            <h5 class="modal-title text-center" id="exampleModalLabel"> </h5>
                             <button type="button" class="btn btn-dark" data-bs-dismiss="modal" aria-label="Close"><i class="fas fa-times"></i></button>
                         </div>
                         <div class="modal-body">
@@ -215,17 +215,14 @@
                             <a href="#">FAQ</a>
                         </div>
                         <div class="col-12 col-lg col-md">
-                            <a href="#">Contact</a>
+                            <a href="#">Contáctanos</a>
                         </div>
                         <div class="col-12 col-lg col-md">
-                            <a href="#">Novedades</a>
-                        </div>
-                        <div class="col-12 col-lg col-md">
-                            <a href="#">Privacy</a>
+                            <a href="#">Privacidad</a>
                         </div>
                         <div class="col-12 col-lg col-md">
                             <h6 class="text-center mt-2 mb-2">
-                                Follow us: 
+                                Síguenos: 
                                 <a href="#"><i class="fab fa-instagram-square"></i></a>
                                 <a href="#"><i class="fab fa-facebook-square"></i></a>
                             </h6>
