the adopt main card img was replaced, testing the local storage changes for the new filter, a title to the admin table was added

--- a/view/app.html
+++ b/view/app.html
@@ -72,6 +72,7 @@
             <!-- TABLA DE DATOS ADMIN -->
             <section id="tableAdmin" v-if="newArrUsers[pos].token === true && newArrUsers[pos].status === 'admin'">
                 <div class="container">
+                    <h3 class="text-center">TABLA DE MASCOTAS ADOPTADAS</h3>
                     <div class="table-responsive">
                         <table class="table table-dark table-hover">
                             <thead class="text-center">
