--- a/view/app.html
+++ b/view/app.html
@@ -102,7 +102,11 @@
                                 </tr>
                                 <tr class="report">
                                     <td colspan="2">Cantidad Mascotas Adoptadas:</td>
-                                    <td colspan="2" v-text="nPetsAdopted"></td>
+                                    <td colspan="2" v-text="nPetsAdopted" class="text-success"></td>
+                                </tr>
+                                <tr class="report">
+                                    <td colspan="2">Cantidad Mascotas Disponibles:</td>
+                                    <td colspan="2" v-text="newArrPets.length" class="text-primary"></td>
                                 </tr>
                             </tbody>
                             <tbody v-else>
