se agrego modal seleccionar imagen

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,8 +154,10 @@ header{
 
 
 /* END adoptar CARDS */
+/*imagenes seleccionar*/
 
 
+/* end imagenes seleccionar*/
 /*start admin table*/
 #tableAdmin .report{
     font-weight: bold;
