se agrega modal y otras funciones

--- a/view/app.html
+++ b/view/app.html
@@ -157,7 +157,7 @@
                 </div>
             </div>
             <!-- /Modal dar en adopción-->
-           <!-- Modal seleccionar imagenes-->   
+           <!-- Modal seleccionar imagenes perros y gatos-->   
            <div class="modal fade" id="modalseleccionar"  tabindex="-1" aria-labelledby="modalseleccionar" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -165,24 +165,26 @@
                     <h5 class="modal-title" id="staticBackdropLabel">Seleccionar imagen</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
-                  <div class="selectimg">
-                    <div class=" col-md-4 col-lg-4 mt-3 mb-4">
+                  <div class="selectimgperro">
+                    <div class=" col-md-6 col-lg-4 mt-3 mb-4">
                     <a href="" title="Seleccionar imagen" class="btn"><img src="/Pets/images/imgseleccionar1.jpg" style="width: 300px; padding: 10px; ;"><img></a>
                 </div>
-                <div class="col-md-4 col-lg-4 mt-3 mb-4">
+                <div class="col-md-6 col-lg-4 mt-3 mb-4">
                     <a href="" title="Seleccionar imagen" class="btn"><img src="/Pets/images/imgseleccionar2.jpg" style="width: 300px; padding: 10px; ;"><img></a>
                 </div>
+            </div>
+            <div class="selectimggato">
                 <div class=" col-md-4 col-lg-4 mt-3 mb-4" >
                     <a href="" title="Seleccionar imagen" class="btn"><img src="/Pets/images/imgseleccionar3.jpg" style="width: 300px; padding: 10px; ;"><img></a>
                 </div>
                 <div class=" col-md-4 col-lg-4 mt-3 mb-4" >
                     <a href="" title="Seleccionar imagen" class="btn"><img src="/Pets/images/imgseleccionar4.jpg" style="width: 300px; padding: 10px; ;"><img></a>
                 </div>
-                </div>
+            </div>
+                
                 
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-danger">Cancelar</button>
                   </div>
                 </div>
               </div>
