the selec images is now functional, the form is fully functional, the pet register works correctly, and the most parts of the validations for the pet register form and the img selection modal were made, the data is working now with local storage successfully

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,6 @@ header{
     color: #000;
 }
 
-
 /* END adoptar CARDS */
 
 /*start admin table*/
@@ -161,6 +160,21 @@ header{
     font-size: 20px;
 }
 /*end admin table*/
+
+/*back button modal for image selection*/
+#modalseleccionar .back{
+    background-color: #ffb03a;
+    border: 0;
+    color: #000;
+    font-weight: bold;
+    transition: 0.4s all ease;
+}
+
+#modalseleccionar .back:hover{
+    background-color: #000;
+    color: #ffb03a;
+}
+/*end back button*/
 
 .form {
     width: 450px;
