--- a/view/app.html
+++ b/view/app.html
@@ -132,68 +132,96 @@
                             <form>
                                 <div class="mb-3">
                                     <label class="form-label">Tipo de mascota</label>
-                                    <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-                                        <option selected>Seleccione una opción</option>
-                                        <option value="1">Perro</option>
-                                        <option value="2">Gato</option>
+                                    <select class="form-select form-select-sm" aria-label=".form-select-sm example" v-model="typePet">
+                                        <option value="" selected>Seleccione una opción</option>
+                                        <option value="Perro">Perro</option>
+                                        <option value="Gato">Gato</option>
                                     </select>
+                                    <span v-if="spaninputs[0].spinp == 1"><strong class="text-center text-danger">Este campo es requerido</strong></span>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="nameDog" class="form-label">Nombre</label>
-                                    <input type="text" class="form-control" id="" placeholder="Ingrese nombre" v-model="nameDog">
+                                    <label for="namePet" class="form-label">Nombre</label>
+                                    <input type="text" class="form-control" id="namePet" placeholder="Ingrese nombre" v-model="namePet">
+                                    <span v-if="spaninputs[1].spinp == 1"><strong class="text-center text-danger">Este campo es requerido</strong></span>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="raceDog" class="form-label">Raza</label>
-                                    <input type="text" class="form-control" id="" placeholder="Ingrese raza" v-model="raceDog">
+                                    <label for="racePet" class="form-label">Raza</label>
+                                    <input type="text" class="form-control" id="racePet" placeholder="Ingrese raza" v-model="racePet">
+                                    <span v-if="spaninputs[2].spinp == 1"><strong class="text-center text-danger">Este campo es requerido</strong></span>
                                 </div>
                                 <div class="mb-3">
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"  data-bs-target="#modalseleccionar">
+                                    <label for="agePet" class="form-label">Edad</label>
+                                    <input type="number" min="0" max="15" class="form-control" id="agePet" placeholder="Ingrese la edad" v-model="agePet">
+                                    <span v-if="spaninputs[3].spinp == 1"><strong class="text-center text-danger">Este campo es requerido</strong></span>
+                                </div>
+                                <div class="mb-3">
+                                    <label class="form-label">Imagen Mascota</label>
+                                    <input type="text" class="form-control" placeholder="Imagen no seleccionada" readonly v-model="newPetRoute">
+                                    <button type="button" class="btn btn-primary mt-2 mb-2" data-bs-toggle="modal"  data-bs-target="#modalseleccionar">
                                         Seleccionar imagen
-                                      </button>
+                                    </button>
+                                    <span v-if="spaninputs[4].spinp == 1"><strong class="text-center text-danger">Este campo es requerido</strong></span>
                                 </div>
                             </form>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-primary"  >Guardar</button>
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                            <button type="button" class="btn btn-primary" @click="saveNewPet">Guardar</button>
+                            <button type="button" class="btn btn-danger" data-bs-dismiss="modal" @click="cancelbtn">Cancelar</button>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- /Modal dar en adopción-->
-           <!-- Modal seleccionar imagenes perros y gatos-->   
-           <div class="modal fade" id="modalseleccionar"  tabindex="-1" aria-labelledby="modalseleccionar" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel">Seleccionar imagen</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="selectimgperro">
-                    <div class=" col-md-6 col-lg-4 mt-3 mb-4">
-                    <a href="" title="Seleccionar imagen" class="btn"><img src="/Pets/images/imgseleccionar1.jpg" style="width: 300px; padding: 10px; ;"><img></a>
-                </div>
-                <div class="col-md-6 col-lg-4 mt-3 mb-4">
-                    <a href="" title="Seleccionar imagen" class="btn"><img src="/Pets/images/imgseleccionar2.jpg" style="width: 300px; padding: 10px; ;"><img></a>
+
+            <!-- Modal seleccionar imagenes perros y gatos-->
+            <div class="modal fade" id="modalseleccionar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static">
+                <div class="modal-dialog modal-md">
+                    <div class="modal-content">
+                        <div class="modal-header text-center">
+                            <h5 class="modal-title text-center" id="exampleModalLabel">Seleccionar Imagen</h5>
+                            <button type="button" class="btn btn-dark back" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">Regresar <i class="fa-solid fa-rotate-left"></i></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-6 col-md-6 col-lg-6 mt-3 mb-4">
+                                        <div class="card" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">
+                                            <img src="../images/imgseleccionar1.jpg" class="card-img-top" alt="selectimg" @click="selectimg('../images/imgseleccionar1.jpg')">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6 col-md-6 col-lg-6 mt-3 mb-4">
+                                        <div class="card" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">
+                                            <img src="../images/imgseleccionar2.jpg" class="card-img-top" alt="selectimg" @click="selectimg('../images/imgseleccionar2.jpg')">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6 col-md-6 col-lg-6 mt-3 mb-4">
+                                        <div class="card" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">
+                                            <img src="../images/imgseleccionar3.jpg" class="card-img-top" alt="selectimg" @click="selectimg('../images/imgseleccionar3.jpg')">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6 col-md-6 col-lg-6 mt-3 mb-4">
+                                        <div class="card" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">
+                                            <img src="../images/imgseleccionar4.jpg" class="card-img-top" alt="selectimg" @click="selectimg('../images/imgseleccionar4.jpg')">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="selectimggato">
-                <div class=" col-md-4 col-lg-4 mt-3 mb-4" >
-                    <a href="" title="Seleccionar imagen" class="btn"><img src="/Pets/images/imgseleccionar3.jpg" style="width: 300px; padding: 10px; ;"><img></a>
-                </div>
-                <div class=" col-md-4 col-lg-4 mt-3 mb-4" >
-                    <a href="" title="Seleccionar imagen" class="btn"><img src="/Pets/images/imgseleccionar4.jpg" style="width: 300px; padding: 10px; ;"><img></a>
-                </div>
-            </div>
-                
-                
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  </div>
-                </div>
-              </div>
-          </div>
-   <!-- /Modal seleccionar imagenes-->
+            <!-- /Modal seleccionar imagenes-->
+
             <!-- Modal adoptar -->
             <div class="modal fade" id="adoptar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-xl">
