--- a/view/app.html
+++ b/view/app.html
@@ -303,6 +303,16 @@
             </footer>
             <!-- /FOOTER -->
         </div>
+        <div id="app2" v-else>
+            <div class="container">
+                <div class="row">
+                    <dov class="col notvaltext">
+                        <h1 class="text-center notvalid">ERROR 401</h1>
+                        <h1 class="text-center notvalid">UNAUTHORIZED</h1>
+                    </dov>
+                </div>
+            </div>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
     <script src="../js/vue.js"></script>
