--- a/view/app.html
+++ b/view/app.html
@@ -181,8 +181,26 @@
                             <h5 class="modal-title text-center" id="exampleModalLabel">Seleccionar Imagen</h5>
                             <button type="button" class="btn btn-dark back" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">Regresar <i class="fa-solid fa-rotate-left"></i></button>
                         </div>
-                        <div class="modal-body">
-                            <div class="container">
+                        <div class="modal-body" v-if="typePet.length > 0">
+                            <div class="container" v-if="typePet == 'Gato'">
+                                <div class="row">
+                                    <div class="col-6 col-md-6 col-lg-6 mt-3 mb-4">
+                                        <div class="card" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">
+                                            <img src="../images/imgseleccionar3.jpg" class="card-img-top" alt="selectimg" @click="selectimg('../images/imgseleccionar3.jpg')">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6 col-md-6 col-lg-6 mt-3 mb-4">
+                                        <div class="card" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">
+                                            <img src="../images/imgseleccionar4.jpg" class="card-img-top" alt="selectimg" @click="selectimg('../images/imgseleccionar4.jpg')">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="container" v-else-if="typePet == 'Perro'">
                                 <div class="row">
                                     <div class="col-6 col-md-6 col-lg-6 mt-3 mb-4">
                                         <div class="card" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">
@@ -198,6 +216,12 @@
                                             </div>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-body" v-else>
+                            <div class="container">
+                                <div class="row">
                                     <div class="col-6 col-md-6 col-lg-6 mt-3 mb-4">
                                         <div class="card" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">
                                             <img src="../images/imgseleccionar3.jpg" class="card-img-top" alt="selectimg" @click="selectimg('../images/imgseleccionar3.jpg')">
@@ -208,6 +232,20 @@
                                     <div class="col-6 col-md-6 col-lg-6 mt-3 mb-4">
                                         <div class="card" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">
                                             <img src="../images/imgseleccionar4.jpg" class="card-img-top" alt="selectimg" @click="selectimg('../images/imgseleccionar4.jpg')">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6 col-md-6 col-lg-6 mt-3 mb-4">
+                                        <div class="card" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">
+                                            <img src="../images/imgseleccionar1.jpg" class="card-img-top" alt="selectimg" @click="selectimg('../images/imgseleccionar1.jpg')">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6 col-md-6 col-lg-6 mt-3 mb-4">
+                                        <div class="card" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">
+                                            <img src="../images/imgseleccionar2.jpg" class="card-img-top" alt="selectimg" @click="selectimg('../images/imgseleccionar2.jpg')">
                                             <div class="card-body">
                                             </div>
                                         </div>
@@ -303,7 +341,7 @@
             </footer>
             <!-- /FOOTER -->
         </div>
-        <div id="app2" v-else>
+        <!-- <div id="app2" v-else>
             <div class="container">
                 <div class="row">
                     <dov class="col notvaltext">
@@ -312,7 +350,7 @@
                     </dov>
                 </div>
             </div>
-        </div>
+        </div> -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
     <script src="../js/vue.js"></script>
