--- a/view/app.html
+++ b/view/app.html
@@ -125,7 +125,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">Datos de la mascota</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button type="button" class="btn-close" id="closeGiveAdoption" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                             <form>
@@ -265,7 +265,7 @@
                     <div class="modal-content">
                         <div class="modal-header text-center">
                             <h5 class="modal-title text-center" id="exampleModalLabel">Adopciones</h5>
-                            <button type="button" class="btn btn-dark" data-bs-dismiss="modal" aria-label="Close"><i class="fas fa-times"></i></button>
+                            <button type="button" class="btn btn-dark" id="closeAdopt" data-bs-dismiss="modal" aria-label="Close"><i class="fas fa-times"></i></button>
                         </div>
                         <div class="modal-body">
                             <div class="container">
