--- a/view/app.html
+++ b/view/app.html
@@ -202,14 +202,14 @@
                             <div class="container" v-else-if="typePet == 'Perro'">
                                 <div class="row">
                                     <div class="col-6 col-md-6 col-lg-6 mt-3 mb-4">
-                                        <div class="card" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">
+                                        <div class="card" data-bs-toggle="modal" id="optDDog1" data-bs-target="#modalAdopcion">
                                             <img src="../images/imgseleccionar1.jpg" class="card-img-top" alt="selectimg" @click="selectimg('../images/imgseleccionar1.jpg')">
                                             <div class="card-body">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-6 col-md-6 col-lg-6 mt-3 mb-4">
-                                        <div class="card" data-bs-toggle="modal"  data-bs-target="#modalAdopcion">
+                                        <div class="card" data-bs-toggle="modal" id="optDDog2" data-bs-target="#modalAdopcion">
                                             <img src="../images/imgseleccionar2.jpg" class="card-img-top" alt="selectimg" @click="selectimg('../images/imgseleccionar2.jpg')">
                                             <div class="card-body">
                                             </div>
