--- a/view/app.html
+++ b/view/app.html
@@ -173,7 +173,7 @@
             <!-- /Modal dar en adopción-->
 
             <!-- Modal seleccionar imagenes perros y gatos-->
-            <div class="modal fade" id="modalseleccionar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static">
+            <div class="modal fade" id="modalseleccionar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-md">
                     <div class="modal-content">
                         <div class="modal-header text-center">
